--- a/frontend/corn_app/pubspec.yaml
+++ b/frontend/corn_app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   http: ^1.2.0
   google_fonts: ^6.2.1
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
