feat: Update environment configuration and enhance leaf capture page
- Updated API base URL for Android physical devices in env.dart.
- Added new images for the diagnosis feature.
- Enhanced the CaptureLeafPage with background images and animations.
- Improved UI elements for better user experience during leaf capture.
- Added fertilizer recommendations handling in NutrientPredictionPage.
- Implemented a modal for detailed fertilizer options.
- Updated pubspec.yaml to include new assets.

--- a/frontend/corn_app/pubspec.yaml
+++ b/frontend/corn_app/pubspec.yaml
@@ -60,6 +60,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - lib/features/diagnosis/presentation/image/Gemini_Generated_Image_crp1pgcrp1pgcrp1.png
+    - lib/features/diagnosis/presentation/image/image 2.png
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
